--- a/package.json
+++ b/package.json
@@ -21,5 +21,15 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1"
+  },
+  "jest": {
+    "setupFiles": [
+      "react-app-polyfill/jsdom",
+      "src/jestsetup.js"
+    ]
+  }
 }
